package com.example;

public class Main {
  public static void main(String[] args) {
    System.out.println("Hello , World!");
    Util.sayHello("Java Developer");
  }
}